# MethylArray-QC

./: .gitignore  Makefile  README.md  main.nf  methyl-array-qc.nf  modules.nf  nextflow.config  nextflow_schema.json  nf-test.config  pyproject.toml  requirements.R  requirements_sesame.R  sample_sheet_schema.json  sesame_cache.R
images/Python/: Dockerfile
images/R/: Dockerfile
images/R_clock/: Dockerfile
images/R_other/: Dockerfile
images/R_sesame/: Dockerfile
lib/: JsonWorkflowParamExporter.groovy
modules/: QC.nf  additional_validators_after_impute.nf  additional_validators_init.nf  anomaly_detection.nf  batch_effect.nf  beta_distribution.nf  epigenetic_age_inference.nf  epigenetic_age_plots.nf  impute.nf  nan_distribution_per_probe.nf  nan_distribution_per_sample.nf  pca.nf  preprocess.nf  sex_inference.nf
templates/: report.html
tests/: methyl-array-qc.anomaly_detection.nf.test  methyl-array-qc.impute.nf.test  methyl-array-qc.preprocess.nf.test  methyl-array-qc.qc.nf.test  methyl-array-qc.sex_inference.nf.test  modules.anomaly_detection.nf.test  modules.batch_effect.nf.test  modules.impute.nf.test  modules.preprocess.nf.test  modules.qc.nf.test  modules.sex_inference.nf.test  nextflow.config
