[tool.poetry]
name = "methyl-array-qc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.2"
plotly = "^5.24.1"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"
tqdm = "^4.67.1"
pyarrow = "^19.0.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
